Caching the user's coordinates for future visits, adding functionality in to refresh the user's location, adding in a credentialed call to the Geolocation API for city name retrieval

--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -4,5 +4,6 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="js/lib/mustache.min.js"></script>
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 </head>
 <body>
