--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -5,5 +5,6 @@
   <script src="js/lib/mustache.min.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/compressed/site.css" />
 </head>
 <body>
