--- a/css/compressed/site.css
+++ b/css/compressed/site.css
@@ -1,21 +1,78 @@
-/* Dew point scale colors */
-/* Create classes corresponding to the above colors */
+/* Generate classes corresponding to a mapping of dew point scale colors */
 .dp-level-1 {
-  color: #92CF60; }
+  background-color: #C3E4A8; }
 
 .dp-level-2 {
-  color: #1AB15A; }
+  background-color: #82D4A5; }
 
 .dp-level-3 {
-  color: #FCFD4D; }
+  background-color: #FDFD9D; }
 
 .dp-level-4 {
-  color: #FBBF3C; }
+  background-color: #FCDC94; }
 
 .dp-level-5 {
-  color: #FA0E1B; }
+  background-color: #FC7B82; }
 
 .dp-level-6 {
-  color: #BC0711; }
+  background-color: #DA777D; }
+
+/* Site fonts */
+.regular-font {
+  font-family: 'Lora', serif;
+  font-weight: 400; }
+
+.bold-font, header, .forecast-holder .currently .city-name {
+  font-family: 'Lora', serif;
+  font-weight: 700; }
+
+/* Useful mixins */
+/* Animation */
+@keyframes pulse {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+header {
+  margin: 2em 0;
+  text-align: center; }
+  header img {
+    display: inline-block;
+    height: 40px;
+    vertical-align: middle; }
+
+footer {
+  font-size: .75em;
+  margin: 1em 0;
+  text-align: center; }
+
+body {
+  font-family: 'Lora', serif; }
+
+.getting-location img {
+  animation: pulse 1s infinite;
+  height: 25px; }
+
+.forecast-holder {
+  display: none; }
+  .forecast-holder .currently {
+    margin: 0 0 2em; }
+    .forecast-holder .currently .city-name {
+      font-size: 2em; }
+    .forecast-holder .currently .currently-data {
+      font-size: 1.1em;
+      margin: 1em 0; }
+      .forecast-holder .currently .currently-data .temp-icon {
+        display: inline-block;
+        vertical-align: middle;
+        height: 25px; }
+  .forecast-holder .day {
+    min-height: 15em;
+    padding: 5px; }
+    .forecast-holder .day .inner-wrapper {
+      height: 250px;
+      width: 100%; }
 
 /*# sourceMappingURL=site.css.map */
