--- a/css/compressed/variables.css
+++ b/css/compressed/variables.css
@@ -1,21 +1,39 @@
-/* Dew point scale colors */
-/* Create classes corresponding to the above colors */
+/* Generate classes corresponding to a mapping of dew point scale colors */
 .dp-level-1 {
-  color: #92CF60; }
+  background-color: #C3E4A8; }
 
 .dp-level-2 {
-  color: #1AB15A; }
+  background-color: #82D4A5; }
 
 .dp-level-3 {
-  color: #FCFD4D; }
+  background-color: #FDFD9D; }
 
 .dp-level-4 {
-  color: #FBBF3C; }
+  background-color: #FCDC94; }
 
 .dp-level-5 {
-  color: #FA0E1B; }
+  background-color: #FC7B82; }
 
 .dp-level-6 {
-  color: #BC0711; }
+  background-color: #DA777D; }
+
+/* Site fonts */
+.regular-font {
+  font-family: 'Lora', serif;
+  font-weight: 400; }
+
+.bold-font {
+  font-family: 'Lora', serif;
+  font-weight: 700; }
+
+/* Useful mixins */
+/* Animation */
+@keyframes pulse {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=variables.css.map */
