--- a/css/compressed/site.css
+++ b/css/compressed/site.css
@@ -1,112 +1,56 @@
 /* Generate classes corresponding to a mapping of dew point scale colors */
-.dp-level-1 {
-  background-color: #C3E4A8; }
+.dp-level-1 { background-color: #C3E4A8; }
 
-.dp-level-2 {
-  background-color: #82D4A5; }
+.dp-level-2 { background-color: #82D4A5; }
 
-.dp-level-3 {
-  background-color: #FDFD9D; }
+.dp-level-3 { background-color: #FDFD9D; }
 
-.dp-level-4 {
-  background-color: #FCDC94; }
+.dp-level-4 { background-color: #FCDC94; }
 
-.dp-level-5 {
-  background-color: #FC7B82; }
+.dp-level-5 { background-color: #FC7B82; }
 
-.dp-level-6 {
-  background-color: #DA777D; }
+.dp-level-6 { background-color: #DA777D; }
 
 /* Site fonts */
-.regular-font {
-  font-family: 'Lora', serif;
-  font-weight: 400; }
+.regular-font, header { font-family: 'Lora', serif; font-weight: 400; }
 
-.bold-font, header, .forecast-holder .currently .city-name {
-  font-family: 'Lora', serif;
-  font-weight: 700; }
+.bold-font, .forecast-holder .currently .city-name { font-family: 'Lora', serif; font-weight: 700; }
 
 /* Useful mixins */
 /* Animation */
-@keyframes pulse {
-  0% {
-    opacity: 1; }
-  50% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-header {
-  margin: 2em 0;
-  text-align: center; }
-  header img {
-    display: inline-block;
-    height: 40px;
-    vertical-align: middle; }
+@keyframes pulse { 0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; } }
+header { margin: 2em 0; text-align: center; }
+header .dewdrop { display: inline-block; height: 40px; vertical-align: middle; }
+header .locate-me { color: inherit; margin: 0 0 0 .5em; text-decoration: none; }
+header .locate-me input { display: inline-block; vertical-align: middle; }
+header .locate-me img { display: inline-block; height: 20px; vertical-align: middle; }
 
-footer {
-  font-size: .75em;
-  margin: 1em 0;
-  text-align: center; }
+footer { font-size: .75em; margin: 1em 0; text-align: center; }
 
-body {
-  font-family: 'Lora', serif; }
+body { font-family: 'Lora', serif; }
 
-.getting-location img {
-  animation: pulse 1s infinite;
-  height: 25px; }
+.getting-location, .getting-weather { display: none; margin: 1em 0; }
+.getting-location img, .getting-weather img { animation: pulse 1s infinite; height: 25px; }
 
-.forecast-holder {
-  display: none; }
-  .forecast-holder .currently {
-    position: relative; }
-    .forecast-holder .currently .city-name {
-      font-size: 2em; }
-    .forecast-holder .currently .dewpoint {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-size: 4em; }
-    .forecast-holder .currently .currently-data {
-      font-size: 1.1em;
-      margin: 1em 0; }
-      .forecast-holder .currently .currently-data .update-location {
-        color: inherit;
-        display: inline-block;
-        margin-top: 10px;
-        font-size: .75em; }
-  .forecast-holder .day {
-    min-height: 15em;
-    padding: 5px; }
-    .forecast-holder .day .inner-wrapper {
-      height: 250px;
-      width: 100%; }
-      .forecast-holder .day .inner-wrapper .dewdrop-icon {
-        display: inline-block;
-        vertical-align: middle;
-        height: 30px; }
-      .forecast-holder .day .inner-wrapper .icon-holder {
-        display: inline-block;
-        width: 20px; }
-      .forecast-holder .day .inner-wrapper .small-icon {
-        display: inline-block;
-        vertical-align: middle;
-        height: 15px; }
-      .forecast-holder .day .inner-wrapper .day-contents {
-        height: 100%;
-        position: relative;
-        width: 100%; }
-        .forecast-holder .day .inner-wrapper .day-contents .temperature {
-          font-size: 4em;
-          position: absolute;
-          text-align: center;
-          top: 0;
-          width: 100%; }
-          .forecast-holder .day .inner-wrapper .day-contents .temperature .discomfort-text {
-            font-size: .25em;
-            text-align: center; }
-        .forecast-holder .day .inner-wrapper .day-contents .summary {
-          bottom: 0;
-          font-size: .9em;
-          position: absolute; }
+.forecast-holder { display: none; }
+.forecast-holder .currently { position: relative; }
+.forecast-holder .currently .city-name { font-size: 2em; }
+.forecast-holder .currently .dewpoint { position: absolute; top: 20px; right: 20px; font-size: 4em; }
+.forecast-holder .currently .currently-data { font-size: 1.1em; margin: 1em 0; }
+.forecast-holder .currently .currently-data .update-location { color: inherit; display: inline-block; margin-top: 10px; font-size: .75em; }
+.forecast-holder .day { min-height: 15em; padding: 5px; }
+.forecast-holder .day .inner-wrapper { height: 250px; width: 100%; }
+.forecast-holder .day .inner-wrapper .dewdrop-icon { display: inline-block; vertical-align: middle; height: 30px; }
+.forecast-holder .day .inner-wrapper .icon-holder { display: inline-block; width: 20px; }
+.forecast-holder .day .inner-wrapper .small-icon { display: inline-block; vertical-align: middle; height: 15px; }
+.forecast-holder .day .inner-wrapper .day-contents { height: 100%; position: relative; width: 100%; }
+.forecast-holder .day .inner-wrapper .day-contents .temperature { font-size: 4em; position: absolute; text-align: center; top: 0; width: 100%; }
+.forecast-holder .day .inner-wrapper .day-contents .temperature .discomfort-text { font-size: .25em; text-align: center; }
+.forecast-holder .day .inner-wrapper .day-contents .summary { bottom: 0; font-size: .9em; position: absolute; }
+
+/* Location search bar */
+#location-search { background-color: #fff; border-radius: 2px; border: 1px solid transparent; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); box-sizing: border-box; font-family: Roboto; font-size: 15px; font-weight: 300; height: 29px; margin-left: 17px; margin-top: 10px; outline: none; padding: 0 11px 0 13px; text-overflow: ellipsis; width: 400px; }
 
 /*# sourceMappingURL=site.css.map */
