--- a/css/site.scss
+++ b/css/site.scss
@@ -7,7 +7,11 @@ body {
   font-family: 'Lora', serif;
 }
 
-.getting-location {
+.getting-location,
+.getting-weather {
+  display: none;
+  margin: 1em 0;
+
   img {
     animation: pulse 1s infinite;
     height: 25px;
@@ -96,4 +100,23 @@ body {
       }
     }
   }
+}
+
+/* Location search bar */
+#location-search {
+  background-color: #fff;
+  border-radius: 2px;
+  border: 1px solid transparent;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  height: 29px;
+  margin-left: 17px;
+  margin-top: 10px;
+  outline: none;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 400px;
 }
