--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -7,6 +7,12 @@
     </div>
   </div>
 
+  <div class="row justify-content-center getting-weather">
+    <div class="col-12 col-md-6 text-center">
+      <img src="/image/icons8-partly-cloudy-day-30.png"> Getting weather...
+    </div>
+  </div>
+
   <div class="row justify-content-center forecast-holder">
     <div class="col-12" id="forecast"></div>
 
