Adding in date, formatting some text

--- a/css/compressed/site.css
+++ b/css/compressed/site.css
@@ -27,7 +27,8 @@ header .locate-me { color: inherit; margin: 0 0 0 .5em; text-decoration: none; }
 header .locate-me input { display: inline-block; vertical-align: middle; }
 header .locate-me img { display: inline-block; height: 20px; vertical-align: middle; }
 
-footer { font-size: .75em; margin: 1em 0; text-align: center; }
+footer { font-size: .75em; margin: 2.5em 0; text-align: center; }
+footer a { color: inherit; }
 
 body { font-family: 'Lora', serif; }
 
@@ -38,6 +39,7 @@ body { font-family: 'Lora', serif; }
 .forecast-holder .currently { position: relative; }
 .forecast-holder .currently .city-name { font-size: 2em; }
 .forecast-holder .currently .dewpoint { position: absolute; top: 20px; right: 20px; font-size: 4em; }
+.forecast-holder .currently .dewpoint .discomfort-text { font-size: .3em; text-align: center; }
 .forecast-holder .currently .currently-data { font-size: 1.1em; margin: 1em 0; }
 .forecast-holder .currently .currently-data .update-location { color: inherit; display: inline-block; margin-top: 10px; font-size: .75em; }
 .forecast-holder .day { min-height: 15em; padding: 5px; }
@@ -46,7 +48,8 @@ body { font-family: 'Lora', serif; }
 .forecast-holder .day .inner-wrapper .icon-holder { display: inline-block; width: 20px; }
 .forecast-holder .day .inner-wrapper .small-icon { display: inline-block; vertical-align: middle; height: 15px; }
 .forecast-holder .day .inner-wrapper .day-contents { height: 100%; position: relative; width: 100%; }
-.forecast-holder .day .inner-wrapper .day-contents .temperature { font-size: 4em; position: absolute; text-align: center; top: 0; width: 100%; }
+.forecast-holder .day .inner-wrapper .day-contents .temperature { font-size: 4em; line-height: .75em; position: absolute; text-align: center; top: 0; width: 100%; }
+.forecast-holder .day .inner-wrapper .day-contents .temperature .date { font-size: .25em; text-align: left; }
 .forecast-holder .day .inner-wrapper .day-contents .temperature .discomfort-text { font-size: .25em; text-align: center; }
 .forecast-holder .day .inner-wrapper .day-contents .summary { bottom: 0; font-size: .9em; position: absolute; }
 
