--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -12,9 +12,9 @@
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-  <script type="text/babel" src="js/site-react.js"></script>
-
+  <script type="text/javascript" src="js/lib/date.format.js"></script>
   <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/babel" src="js/site-react.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
