--- a/css/compressed/footer.css
+++ b/css/compressed/footer.css
@@ -1,6 +1,4 @@
-footer {
-  font-size: .75em;
-  margin: 1em 0;
-  text-align: center; }
+footer { font-size: .75em; margin: 2.5em 0; text-align: center; }
+footer a { color: inherit; }
 
 /*# sourceMappingURL=footer.css.map */
