Doing a lot of mobile styling work

--- a/css/compressed/header.css
+++ b/css/compressed/header.css
@@ -1,37 +1,2 @@
-/*
-Sass::SyntaxError: "header" failed to @extend ".regular-font".
-The selector ".regular-font" was not found.
-Use "@extend .regular-font !optional" if the extend should be able to fail.
-
-
-Backtrace:
-css/header.scss:2
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/tree/visitors/extend.rb:56:in `block in check_extends_fired!'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/util/subset_map.rb:105:in `block in each_value'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/util/subset_map.rb:105:in `each'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/util/subset_map.rb:105:in `each_value'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/tree/visitors/extend.rb:51:in `check_extends_fired!'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/tree/visitors/extend.rb:16:in `visit'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/tree/root_node.rb:39:in `css_tree'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:320:in `block in watch'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-/Users/jrussell/.rvm/gems/ruby-2.3.1/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Sass::SyntaxError: \"header\" failed to @extend \".regular-font\".\A The selector \".regular-font\" was not found.\A Use \"@extend .regular-font !optional\" if the extend should be able to fail.\A "; }
+.dp-level-1{background-color:#C3E4A8}.dp-level-2{background-color:#82D4A5}.dp-level-3{background-color:#FDFD9D}.dp-level-4{background-color:#FCDC94}.dp-level-5{background-color:#FC7B82}.dp-level-6{background-color:#DA777D}.regular-font,header{font-family:'Lora', serif;font-weight:400}.bold-font{font-family:'Lora', serif;font-weight:700}@keyframes pulse{0%{opacity:1}50%{opacity:0}100%{opacity:1}}header{margin:2em 0;text-align:center}header .dewdrop{display:inline-block;height:40px;vertical-align:middle}header h2{font-size:1.5em}@media screen and (min-width: 950px){header h2{font-size:2em}}header .locate-me{color:inherit;margin:0 0 0 .5em;text-decoration:none}header .locate-me input{display:inline-block;vertical-align:middle}header .locate-me img{display:inline-block;height:20px;vertical-align:middle}
+/*# sourceMappingURL=header.css.map */
