--- a/css/header.scss
+++ b/css/header.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 header {
   @extend .regular-font;
   margin: 2em 0;
@@ -7,6 +9,14 @@ header {
     display: inline-block;
     height: 40px;
     vertical-align: middle;
+  }
+
+  h2 {
+    font-size: 1.5em;
+
+    @include min($desktopXSmall) {
+      font-size: 2em;
+    }
   }
 
   .locate-me {
