--- a/css/site.scss
+++ b/css/site.scss
@@ -25,16 +25,30 @@ body {
   .currently {
     position: relative;
 
+    &.day {
+      .inner-wrapper {
+        height: auto;
+
+        @include min($desktopXSmall) {
+          height: 250px;
+        }
+      }
+    }
+
     .city-name {
       @extend .bold-font;
       font-size: 2em;
     }
 
     .dewpoint {
-      position: absolute;
-      top: 20px;
-      right: 20px;
       font-size: 4em;
+      text-align: center;
+
+      @include min($desktopXSmall) {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
 
       .discomfort-text {
         font-size: .3em;
@@ -120,14 +134,20 @@ body {
   border: 1px solid transparent;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
+  display: block;
   font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
   height: 29px;
-  margin-left: 17px;
-  margin-top: 10px;
+  margin: 1.5em auto .75em;
   outline: none;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 400px;
+  width: 80%;
+
+
+  @include min($desktopXSmall) {
+    display: inline-block;
+    width: 400px;
+  }
 }
