--- a/css/variables.scss
+++ b/css/variables.scss
@@ -27,6 +27,12 @@ $dewPointShades: #C3E4A8 #82D4A5 #FDFD9D #FCDC94 #FC7B82 #DA777D;
   vertical-align: middle;
 }
 
+@mixin min($width) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
+
 /* Animation */
 @keyframes pulse {
   0% {
@@ -41,3 +47,14 @@ $dewPointShades: #C3E4A8 #82D4A5 #FDFD9D #FCDC94 #FC7B82 #DA777D;
     opacity: 1;
   }
 }
+
+/* Screen sizes */
+$desktopLarge: 1440px;
+$desktop: 1280px;
+$desktopSmall: 1024px;
+$desktopXSmall: 950px;
+$ipad: 785px;
+$tablet: 768px;
+$mobileLarge: 500px;
+$mobile: 375px;
+$mobileSmall: 320px;
