--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -19,8 +19,8 @@
   <link href="/image/icons8-water-96.png" rel="shortcut icon" type="image/png" />
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <script type="text/javascript" src="js/lib/date.format.js"></script>
