Fixing an issue with the location and weather loading icons, re-flowing some header html to better respect Bootstrap conventions, tidying up some JS object caching

--- a/css/compressed/footer.css
+++ b/css/compressed/footer.css
@@ -1,4 +1,8 @@
-footer { font-size: .75em; margin: 2.5em 0; text-align: center; }
-footer a { color: inherit; }
+footer {
+  font-size: .75em;
+  margin: 2.5em 0;
+  text-align: center; }
+  footer a {
+    color: inherit; }
 
 /*# sourceMappingURL=footer.css.map */
