--- a/tpl/partials/footer.mustache
+++ b/tpl/partials/footer.mustache
@@ -1,2 +1,8 @@
+  <footer class="row">
+    <div class="col-12 justify-content-center">
+      <a target="_blank" href="https://darksky.net/poweredby/">Powered by Dark Sky</a> &bull; <a target="_blank" href="https://icons8.com">Icon pack by Icons8</a>
+    </div>
+  </footer>
+
 </body>
 </html>
