--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -1,24 +1,10 @@
 {{> header}}
 
-<div class="container">
-  <div class="row justify-content-center getting-location">
-    <div class="col-12 col-md-6 text-center">
-      <img src="/image/icons8-near-me-30.png"> Getting location...
+<div class="row">
+  <div class="col-12">
+    <div class="row justify-content-center forecast-holder">
+      <div class="col-12" id="forecast"></div>
     </div>
-  </div>
-
-  <div class="row justify-content-center getting-weather">
-    <div class="col-12 col-md-6 text-center">
-      <img src="/image/icons8-partly-cloudy-day-30.png"> Getting weather...
-    </div>
-  </div>
-
-  <div class="row justify-content-center forecast-holder">
-    <div class="col-12" id="forecast"></div>
-
-    <footer>
-      <a target="_blank" href="https://darksky.net/poweredby/">Powered by Dark Sky</a> &bull; <a target="_blank" href="https://icons8.com">Icon pack by Icons8</a>
-    </footer>
   </div>
 </div>
 
