Changing Dewpoint to Dew Point and adding a link to an explanation of the dew point to the footer

--- a/css/compressed/footer.css
+++ b/css/compressed/footer.css
@@ -4,5 +4,9 @@ footer {
   text-align: center; }
   footer a {
     color: inherit; }
+    footer a.underlined {
+      text-decoration: underline; }
+  footer p {
+    margin-bottom: .25rem; }
 
 /*# sourceMappingURL=footer.css.map */
