--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -15,7 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Dewpoint Forecast</title>
+  <title>Dew Point Forecast</title>
   <link href="/image/icons8-water-96.png" rel="shortcut icon" type="image/png" />
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -37,7 +37,7 @@
   <header>
     <div class="row">
       <div class="col-12">
-        <h2> <img class="dewdrop" src="/image/icons8-water-96.png" /> Dewpoint Forecast </h2>
+        <h2> <img class="dewdrop" src="/image/icons8-water-96.png" /> Dew Point Forecast </h2>
       </div>
     </div>
 
