--- a/css/site.scss
+++ b/css/site.scss
@@ -10,6 +10,7 @@ body {
 // Header and search bar area
 .loading-icons {
   display: inline-block;
+  margin: 1em 0 0;
   vertical-align: middle;
 
   .getting-location,
