--- a/css/site.scss
+++ b/css/site.scss
@@ -134,6 +134,15 @@ body {
   }
 }
 
+/* Geolocation denied */
+.denied-geolocation {
+  display: none;
+
+  &.showing {
+    display: flex;
+  }
+}
+
 /* Location search bar */
 #location-search {
   background-color: #fff;
