--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -8,4 +8,11 @@
   </div>
 </div>
 
+<div class="row denied-geolocation text-center">
+  <div class="col-12">
+    <h3>Geolocation denied</h3>
+    <p>But that's alright! You can use the site without geolocation by entering a location above.</p>
+  </div>
+</div>
+
 {{> footer}}
