--- a/css/compressed/site.css
+++ b/css/compressed/site.css
@@ -81,21 +81,23 @@ header {
     display: inline-block;
     height: 40px;
     vertical-align: middle; }
-  header h2 {
-    font-size: 1.5em; }
-    @media screen and (min-width: 950px) {
-      header h2 {
-        font-size: 2em; } }
-  header .locate-me {
+  header h1 {
+    margin: 0; }
+  header #dew-point-in {
+    opacity: 0;
+    transition: .5s all; }
+    header #dew-point-in.showing {
+      opacity: 1; }
+  header #locate-me {
     color: inherit;
     text-decoration: none; }
     @media screen and (min-width: 950px) {
-      header .locate-me {
+      header #locate-me {
         margin: 0 0 0 .5em; } }
-    header .locate-me input {
+    header #locate-me input {
       display: inline-block;
       vertical-align: middle; }
-    header .locate-me img {
+    header #locate-me img {
       display: inline-block;
       height: 20px;
       vertical-align: middle; }
@@ -115,86 +117,84 @@ body {
   font-family: 'Lora', serif; }
 
 .loading-icons {
-  display: inline-block;
-  margin: 1em 0 0;
+  margin: 1em 0;
   vertical-align: middle; }
-  .loading-icons .getting-location,
-  .loading-icons .getting-weather {
+  .loading-icons #getting-location,
+  .loading-icons #getting-weather {
     animation: pulse 1s infinite;
     height: 25px;
     display: none; }
-    .loading-icons .getting-location.showing,
-    .loading-icons .getting-weather.showing {
+    .loading-icons #getting-location.showing,
+    .loading-icons #getting-weather.showing {
       display: inline; }
 
-.forecast-holder {
-  display: none; }
-  .forecast-holder .currently {
-    position: relative; }
-    .forecast-holder .currently.day .inner-wrapper {
-      height: auto; }
-      @media screen and (min-width: 950px) {
-        .forecast-holder .currently.day .inner-wrapper {
-          height: 250px; } }
-    .forecast-holder .currently .city-name {
-      font-size: 2em; }
-    .forecast-holder .currently .dewpoint {
-      font-size: 4em;
+.forecast-holder .currently {
+  position: relative; }
+  .forecast-holder .currently.day .inner-wrapper {
+    height: auto; }
+    @media screen and (min-width: 950px) {
+      .forecast-holder .currently.day .inner-wrapper {
+        height: 250px; } }
+  .forecast-holder .currently .city-name {
+    font-size: 2em; }
+  .forecast-holder .currently .dewpoint {
+    font-size: 4em;
+    text-align: center; }
+    @media screen and (min-width: 950px) {
+      .forecast-holder .currently .dewpoint {
+        position: absolute;
+        top: 20px;
+        right: 20px; } }
+    .forecast-holder .currently .dewpoint .discomfort-text {
+      font-size: .3em;
       text-align: center; }
-      @media screen and (min-width: 950px) {
-        .forecast-holder .currently .dewpoint {
-          position: absolute;
-          top: 20px;
-          right: 20px; } }
-      .forecast-holder .currently .dewpoint .discomfort-text {
-        font-size: .3em;
-        text-align: center; }
-    .forecast-holder .currently .currently-data {
-      font-size: 1.1em;
-      margin: 1em 0; }
-      .forecast-holder .currently .currently-data .update-location {
-        color: inherit;
-        display: inline-block;
-        margin-top: 10px;
-        font-size: .75em; }
-  .forecast-holder .day {
-    min-height: 15em;
-    padding: 5px; }
-    .forecast-holder .day .inner-wrapper {
-      height: 250px;
+  .forecast-holder .currently .currently-data {
+    font-size: 1.0em;
+    margin: 0 0 1em; }
+    .forecast-holder .currently .currently-data .update-location {
+      color: inherit;
+      display: inline-block;
+      margin-top: 10px;
+      font-size: .75em; }
+  .forecast-holder .currently .todays-forecast-data {
+    font-size: .9em; }
+.forecast-holder .day {
+  min-height: 15em;
+  padding: 5px; }
+  .forecast-holder .day .inner-wrapper {
+    height: 250px;
+    width: 100%; }
+    .forecast-holder .day .inner-wrapper .dewdrop-icon {
+      display: inline-block;
+      vertical-align: middle;
+      height: 30px; }
+    .forecast-holder .day .inner-wrapper .icon-holder {
+      display: inline-block;
+      width: 20px; }
+    .forecast-holder .day .inner-wrapper .small-icon {
+      display: inline-block;
+      vertical-align: middle;
+      height: 15px; }
+    .forecast-holder .day .inner-wrapper .day-contents {
+      height: 100%;
+      position: relative;
       width: 100%; }
-      .forecast-holder .day .inner-wrapper .dewdrop-icon {
-        display: inline-block;
-        vertical-align: middle;
-        height: 30px; }
-      .forecast-holder .day .inner-wrapper .icon-holder {
-        display: inline-block;
-        width: 20px; }
-      .forecast-holder .day .inner-wrapper .small-icon {
-        display: inline-block;
-        vertical-align: middle;
-        height: 15px; }
-      .forecast-holder .day .inner-wrapper .day-contents {
-        height: 100%;
-        position: relative;
+      .forecast-holder .day .inner-wrapper .day-contents .temperature {
+        font-size: 4em;
+        position: absolute;
+        text-align: center;
+        top: 0;
         width: 100%; }
-        .forecast-holder .day .inner-wrapper .day-contents .temperature {
-          font-size: 4em;
-          line-height: .75em;
-          position: absolute;
-          text-align: center;
-          top: 0;
-          width: 100%; }
-          .forecast-holder .day .inner-wrapper .day-contents .temperature .date {
-            font-size: .25em;
-            text-align: left; }
-          .forecast-holder .day .inner-wrapper .day-contents .temperature .discomfort-text {
-            font-size: .25em;
-            text-align: center; }
-        .forecast-holder .day .inner-wrapper .day-contents .summary {
-          bottom: 0;
-          font-size: .9em;
-          position: absolute; }
+        .forecast-holder .day .inner-wrapper .day-contents .temperature .date {
+          font-size: .25em;
+          text-align: left; }
+        .forecast-holder .day .inner-wrapper .day-contents .temperature .discomfort-text {
+          font-size: .25em;
+          text-align: center; }
+      .forecast-holder .day .inner-wrapper .day-contents .summary {
+        bottom: 0;
+        font-size: .9em;
+        position: absolute; }
 
 /* Geolocation denied */
 .denied-geolocation {
@@ -222,6 +222,6 @@ body {
   @media screen and (min-width: 950px) {
     #location-search {
       display: inline-block;
-      width: 400px; } }
+      max-width: 60%; } }
 
 /*# sourceMappingURL=site.css.map */
