--- a/css/compressed/header.css
+++ b/css/compressed/header.css
@@ -40,11 +40,20 @@ header {
   margin: 2em 0;
   text-align: center; }
   header .dewdrop {
-    display: inline-block;
+    display: block;
     height: 40px;
+    margin: 0 auto .5em;
     vertical-align: middle; }
+    @media screen and (min-width: 950px) {
+      header .dewdrop {
+        display: inline-block;
+        margin: auto; } }
   header h1 {
+    font-size: 1.7em;
     margin: 0; }
+    @media screen and (min-width: 950px) {
+      header h1 {
+        font-size: 2.5rem; } }
   header #dew-point-in {
     opacity: 0;
     transition: .5s all; }
