--- a/css/compressed/site.css
+++ b/css/compressed/site.css
@@ -22,7 +22,7 @@
   font-family: 'Lora', serif;
   font-weight: 400; }
 
-.bold-font, .forecast-holder .currently .city-name {
+.bold-font {
   font-family: 'Lora', serif;
   font-weight: 700; }
 
@@ -60,7 +60,7 @@
   font-family: 'Lora', serif;
   font-weight: 400; }
 
-.bold-font, .forecast-holder .currently .city-name {
+.bold-font {
   font-family: 'Lora', serif;
   font-weight: 700; }
 
@@ -138,6 +138,8 @@ body {
     .loading-icons #getting-weather.showing {
       display: inline; }
 
+.forecast-holder .city-name {
+  line-height: 1.25em; }
 .forecast-holder .currently {
   position: relative; }
   .forecast-holder .currently.day .inner-wrapper {
@@ -147,8 +149,6 @@ body {
         height: 250px; } }
   .forecast-holder .currently p {
     margin: 0; }
-  .forecast-holder .currently .city-name {
-    font-size: 2em; }
   .forecast-holder .currently .dewpoint {
     font-size: 4em;
     text-align: center; }
