--- a/css/site.scss
+++ b/css/site.scss
@@ -26,6 +26,10 @@ body {
 
 // Forecast block
 .forecast-holder {
+  .city-name {
+    line-height: 1.25em;
+  }
+
   .currently {
     position: relative;
 
@@ -41,11 +45,6 @@ body {
 
     p {
       margin: 0;
-    }
-
-    .city-name {
-      @extend .bold-font;
-      font-size: 2em;
     }
 
     .dewpoint {
