--- a/tpl/index.mustache
+++ b/tpl/index.mustache
@@ -1,5 +1,25 @@
 {{> header}}
 
+<header class="row align-items-center">
+  <div class="col-12 col-md-6">
+    <h1> <img class="dewdrop" src="/image/drop.svg" /> Dew Point Forecast </h1>
+  </div>
+
+  <div class="col-12 col-md-6">
+    <div>
+      <input id="location-search" type="text" placeholder="Find dew point in another location..." />
+      <a href="#" id="locate-me"><img src="/image/target.svg" /> Use my location</a>
+    </div>
+  </div>
+</header>
+
+<div class="row loading-icons">
+  <div class="col-12 text-center">
+    <img src="/image/target.svg" id="getting-location" />
+    <img src="/image/sun-cloud.svg" id="getting-weather" />
+  </div>
+</div>
+
 <div class="row">
   <div class="col-12">
     <div class="row justify-content-center forecast-holder">
@@ -7,5 +27,12 @@
     </div>
   </div>
 </div>
+
+<footer class="row">
+  <div class="col-12 justify-content-center">
+    <p><a target="_blank" href="https://www.weather.gov/arx/why_dewpoint_vs_humidity" class="underlined">What is the "dew point"?</a></p>
+    <p><a target="_blank" href="https://darksky.net/poweredby/">Powered by Dark Sky</a> API. Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a>, <a href="https://www.freepik.com/" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/epiccoders" title="EpicCoders">EpicCoders</a>, and <a href="https://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.</p>
+  </div>
+</footer>
 
 {{> footer}}
