--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -25,12 +25,12 @@
 
   <script type="text/javascript" src="js/lib/date.format.js"></script>
   <script type="text/javascript" src="js/functions.js"></script>
-  <script type="text/babel" src="js/site-react.js"></script>
+  <script type="text/babel" src="js/site-react.js?v=25"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/compressed/site.css" />
+  <link rel="stylesheet" type="text/css" href="css/compressed/site.css?v=25" />
 </head>
 
 <body class="container">
