--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -16,21 +16,21 @@
   <meta name="viewport" content="width=device-width">
 
   <title>Dew Point Forecast</title>
-  <link href="/image/icons8-water-96.png" rel="shortcut icon" type="image/png" />
+  <link href="/image/drop-favicon.png" rel="shortcut icon" type="image/png" />
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <script type="text/javascript" src="js/lib/date.format.js"></script>
   <script type="text/javascript" src="js/functions.js"></script>
-  <script type="text/babel" src="js/site-react.js?v=25"></script>
+  <script type="text/javascript" src="assets/{{ assetPaths.sitejs }}"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/compressed/site.css?v=25" />
+
+  <link rel="stylesheet" type="text/css" href="assets/{{ assetPaths.sitecss }}" />
 </head>
 
 <body class="container">
