Moving header and footer content back to their respective partials; adding in a link to change between fahrenheit and celsius

--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -34,3 +34,16 @@
 </head>
 
 <body class="container">
+
+<header class="row align-items-center">
+  <div class="col-12 col-md-6">
+    <h1> <img class="dewdrop" src="/image/drop.svg" /> Dew Point Forecast </h1>
+  </div>
+
+  <div class="col-12 col-md-6">
+    <div>
+      <input id="location-search" type="text" placeholder="Find dew point in another location..." />
+      <a href="#" id="locate-me"><img src="/image/target.svg" /> Use my location</a>
+    </div>
+  </div>
+</header>
