Adding OG meta tags

--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -31,6 +31,12 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="assets/{{ assetPaths.sitecss }}" />
+
+  <meta property="og:url" content="https://dewpoint.xyz" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Dew Point Forecast />
+  <meta property="og:description" content="How comfortable is it outside today?" />
+  <meta property="og:image" content="https://dewpoint.xyz/image/drop.svg" />
 </head>
 
 <body class="container">
