--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -36,7 +36,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Dew Point Forecast" />
   <meta property="og:description" content="How comfortable is it outside today?" />
-  <meta property="og:image" content="https://dewpoint.xyz/image/drop.svg" />
+  <meta property="og:image" content="https://dewpoint.xyz/image/share.png" />
 </head>
 
 <body class="container">
