Updating share meta image URLs

--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -36,12 +36,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Dew Point Forecast" />
   <meta property="og:description" content="How comfortable is it outside today?" />
-  <meta property="og:image" content="/image/share.png" />
+  <meta property="og:image" content="https://dewpoint.xyz/image/share.png" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Dew Point Forecast" />
   <meta name="twitter:description" content="How comfortable is it outside today?" />
-  <meta name="twitter:image" content="/image/share.png" />
+  <meta name="twitter:image" content="https://dewpoint.xyz/image/share.png" />
 </head>
 
 <body class="container">
