Moving around C/F change link

--- a/css/header.scss
+++ b/css/header.scss
@@ -55,4 +55,10 @@ header {
       vertical-align: middle;
     }
   }
+
+  .switch-units {
+    font-size: 12px;
+    text-decoration: underline;
+    color: #000;
+  }
 }
