--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -56,5 +56,9 @@
       <input id="location-search" type="text" placeholder="Find dew point in another location..." />
       <a href="#" id="locate-me"><img src="/image/target.svg" /> Use my location</a>
     </div>
+
+    <div class="mb-2">
+      <a href="/switch-units" class="switch-units">Change units to {{ oppositeUnits }}</a>
+    </div>
   </div>
 </header>
