--- a/css/header.scss
+++ b/css/header.scss
@@ -56,7 +56,7 @@ header {
     }
   }
 
-  .switch-units {
+  #switch-units {
     font-size: 12px;
     text-decoration: underline;
     color: #000;
