--- a/tpl/partials/header.mustache
+++ b/tpl/partials/header.mustache
@@ -23,6 +23,7 @@
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 
   <script type="text/javascript" src="js/lib/date.format.js"></script>
+  <script type="text/javascript" src="js/lib/cookie.js"></script>
   <script type="text/javascript" src="js/functions.js"></script>
   <script type="text/javascript" src="assets/{{ assetPaths.sitejs }}"></script>
 
@@ -58,7 +59,7 @@
     </div>
 
     <div class="mb-2">
-      <a href="/switch-units" class="switch-units">Change units to {{ oppositeUnits }}</a>
+      <a href="#" id="switch-units">Change units to <span id="opposite-units">{{ oppositeUnits }}</span></a>
     </div>
   </div>
 </header>
